--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
+    "history": "^4.10.1",
+    "json-server": "^0.15.1",
+    "lodash": "^4.17.15",
+    "normalizr": "^3.4.1",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-input-mask": "^2.0.4",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
